--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,16 @@ on:
 
 jobs:
   build:
+    name: "Build & Test - .NET ${{ matrix.dotnet-version }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
         dotnet-version: [ '3.1.x', '6.x', '7.x' ]
+
+    env:
+        DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+        DOTNET_CLI_TELEMETRY_OPTOUT: 1
+        DOTNET_NOLOGO: true
 
     steps:
     - name: Checkout repository
@@ -22,6 +28,7 @@ jobs:
 
     - name: Setup .NET ${{ matrix.dotnet-version }}
       uses: actions/setup-dotnet@v3
+      id: setup-dotnet
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
 
@@ -35,6 +42,9 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
+
+    - name: Create temporary global.json
+        run: echo '{"sdk":{"version": "${{ steps.setup-dotnet.outputs.dotnet-version }}"} }' > ./global.json
 
     - name: Build
       run: dotnet build --configuration Release --no-restore
