--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,18 +6,19 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+    DOTNET_CLI_TELEMETRY_OPTOUT: 1
+    DOTNET_NOLOGO: true
+    dotnet-version:
+      - 3.1.x
+      - 6.x
+      - 7.x
+
 jobs:
   build:
-    name: "Build & Test - .NET ${{ matrix.dotnet-version }}"
+    name: "Build & Test"
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: [ '3.1.x', '6.x', '7.x' ]
-
-    env:
-        DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-        DOTNET_CLI_TELEMETRY_OPTOUT: 1
-        DOTNET_NOLOGO: true
 
     steps:
     - name: Checkout repository
@@ -26,11 +27,11 @@ jobs:
         fetch-depth: 0
         submodules: recursive
 
-    - name: Setup .NET ${{ matrix.dotnet-version }}
+    - name: Setup .NET
       uses: actions/setup-dotnet@v3
       id: setup-dotnet
       with:
-        dotnet-version: ${{ matrix.dotnet-version }}
+        dotnet-version: ${{ env.dotnet-version }}
 
     - uses: actions/cache@v3
       with:
@@ -51,3 +52,9 @@ jobs:
 
     - name: Test
       run: dotnet test --configuration Release --no-build --no-restore --collect:"XPlat Code Coverage"
+
+    - name: Update codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
