--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,10 @@ env:
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
     DOTNET_CLI_TELEMETRY_OPTOUT: 1
     DOTNET_NOLOGO: true
-    dotnet-version:
-      - 3.1.x
-      - 6.x
-      - 7.x
+    dotnet-version: |
+      3.1.x
+      6.x
+      7.x
 
 jobs:
   build:
