--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,8 @@ jobs:
       with:
         dotnet-version: ${{ env.dotnet-version }}
 
-    - uses: actions/cache@v3
+    - name: Cache
+      uses: actions/cache@v3
       id: nuget-cache
       with:
         path: ~/.nuget/packages
@@ -42,7 +43,6 @@ jobs:
           ${{ runner.os }}-nuget
 
     - name: Restore dependencies
-      if: steps.nuget-cache.outputs.cache-hit != 'true'
       run: dotnet restore
 
     - name: Build
@@ -69,6 +69,22 @@ jobs:
     name: "Publish to GitHub Packages"
     runs-on: ubuntu-latest
     needs: [ build ]
+
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: release-packages
+        path: packages
+        
+    - name: Push packages to GitHub.com/NetEvolve
+      run: dotnet nuget push packages/**/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/NetEvolve/index.json --skip-duplicate
+      
+  nuget:
+    name: "Publish to NuGet.org"
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    needs: [ build, github ]
 
     steps:
     - name: Download Artifacts
