--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         path: |
           **/*.nupkg
           **/*.snupkg
-          
+
   github:
     name: "Publish to GitHub Packages"
     runs-on: ubuntu-latest
@@ -76,12 +76,12 @@ jobs:
       with:
         name: release-packages
         path: packages
-        
+
     - name: Push packages to GitHub.com/NetEvolve
       run: dotnet nuget push packages/**/*.nupkg -k ${{ secrets.PACKAGES_TOKEN }} -s https://nuget.pkg.github.com/NetEvolve/index.json --skip-duplicate
-      
+
   nuget:
-    name: "Publish to NuGet.org"
+    name: "Publish to nuget.org/profiles/NetEvolve"
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: [ build, github ]
@@ -92,6 +92,6 @@ jobs:
       with:
         name: release-packages
         path: packages
-        
-    - name: Push packages to GitHub.com/NetEvolve
+
+    - name: Push packages to nuget.org/profiles/NetEvolve
       run: dotnet nuget push packages/**/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s https://api.nuget.org/v3/index.json --skip-duplicate
