--- a/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
+++ b/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
@@ -12,6 +12,7 @@
     </PackageReference>
     <PackageReference Include="coverlet.msbuild" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="NetEvolve.Extensions.XUnit" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.console">
       <PrivateAssets>all</PrivateAssets>
