--- a/src/NetEvolve.Guard/NetEvolve.Guard.csproj
+++ b/src/NetEvolve.Guard/NetEvolve.Guard.csproj
@@ -16,11 +16,11 @@
       on the `CallerArgumentExpressionAttribute` functionality.
     </Description>
     <CopyrightYearStart>2022</CopyrightYearStart>
-    
-    <PackageProjectUrl>https://github.com/NetEvolve/guard</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/NetEvolve/guard.git</RepositoryUrl>
-    
+
+    <PackageProjectUrl>https://github.com/dailydevops/guard</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/dailydevops/guard.git</RepositoryUrl>
+
     <PackageTags>argument;inputvalidation;parameter;guard;ensure;validation;contract;assert;assertion;exceptions</PackageTags>
   </PropertyGroup>
-  
+
 </Project>
