--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,9 @@ jobs:
     uses: dailydevops/pipelines/.github/workflows/cicd-dotnet.yml@main
     with:
       dotnet-logging: ${{ inputs.dotnet-logging }}
-      dotnet-version: 7.x
+      dotnet-version: |
+        5.x
+        6.x
+        7.x
       solution: ./Guard.sln
     secrets: inherit
