ci: Updated pipeline to support `net8.0`

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,5 +30,7 @@ jobs:
         5.x
         6.x
         7.x
+        8.x
+      dotnet-quality: preview
       solution: ./Guard.sln
     secrets: inherit
