--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   all:
     name: Build & Tests
-    uses: dailydevops/pipelines/.github/workflows/cicd-dotnet.yml@feature/matrix-testing
+    uses: dailydevops/pipelines/.github/workflows/cicd-dotnet.yml@main
     with:
       enableSonarQube: true
       dotnet-logging: ${{ inputs.dotnet-logging }}
