--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,12 +25,13 @@ jobs:
     with:
       enableSonarQube: true
       dotnet-logging: ${{ inputs.dotnet-logging }}
+      dotnet-quality: preview
+      dotnet-testfilter: "'UnitTest'"
       dotnet-version: |
         3.1.x
         5.x
         6.x
         7.x
         8.x
-      dotnet-quality: preview
       solution: ./Guard.sln
     secrets: inherit
