--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,7 +1,5 @@
 <Project>
-
   <Import Project="$(DirEngineeringSettings)sln.packages.props" />
-
   <ItemGroup>
     <GlobalPackageReference Include="CSharpier.MSBuild" Version="0.25.0" />
     <GlobalPackageReference Include="GitVersion.MsBuild" Version="5.12.0" />
@@ -10,16 +8,15 @@
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.7.30" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion Include="coverlet.msbuild" Version="6.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
+    <PackageVersion Include="NetEvolve.Arguments" Version="1.0.5" />
     <PackageVersion Include="NetEvolve.Extensions.XUnit" Version="1.1.70" />
     <PackageVersion Include="xunit" Version="2.5.0" />
     <PackageVersion Include="xunit.core" Version="2.5.0" />
     <PackageVersion Include="xunit.runner.console" Version="2.5.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
-
 </Project>
