--- a/src/NetEvolve.Guard/NetEvolve.Guard.csproj
+++ b/src/NetEvolve.Guard/NetEvolve.Guard.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+
+    <DisableBannedApiForPerformance>true</DisableBannedApiForPerformance>
   </PropertyGroup>
 
   <PropertyGroup>
