--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
     with:
       enableSonarQube: true
       dotnet-logging: ${{ inputs.dotnet-logging }}
-      dotnet-quality: preview
+      dotnet-quality: ga
       dotnet-version: |
         3.1.x
         5.x
