--- a/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
+++ b/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
-    <NoWarn>$(NoWarn);NU1701</NoWarn>
+    <NoWarn>$(NoWarn);NU1701;CA1861</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
