fix: xUnit1042 for better type safety

--- a/src/NetEvolve.Guard/NetEvolve.Guard.csproj
+++ b/src/NetEvolve.Guard/NetEvolve.Guard.csproj
@@ -4,6 +4,8 @@
     <TargetFrameworks>netstandard2.0;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 
     <DisableBannedApiForPerformance>true</DisableBannedApiForPerformance>
+
+    <NoWarn>$(NoWarn);S3236</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
