--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,5 +18,6 @@
     <PackageVersion Include="Polyfill" Version="1.34.0" />
     <PackageVersion Include="xunit" Version="2.6.4" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.6" />
+    <PackageVersion Update="xunit.runner.visualstudio" Version="2.4.5" Condition=" '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'netcoreapp3.1' " />
   </ItemGroup>
 </Project>
