--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,5 +1,8 @@
 <Project>
-  <Import Project="$(DirEngineeringSettings)sln.packages.props" />
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+  </PropertyGroup>
   <ItemGroup>
     <GlobalPackageReference Include="CSharpier.MSBuild" Version="0.26.7" />
     <GlobalPackageReference Include="GitVersion.MsBuild" Version="5.12.0" />
