--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,7 +20,12 @@
     <PackageVersion Include="NetEvolve.Extensions.XUnit" Version="2.2.12" />
     <PackageVersion Include="Polyfill" Version="5.3.0" />
     <PackageVersion Include="xunit" Version="2.8.1" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'netcoreapp3.1' ">
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net5.0' And '$(TargetFramework)' != 'netcoreapp3.1' ">
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1" />
-    <PackageVersion Update="xunit.runner.visualstudio" Version="2.8.1" Condition=" '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'netcoreapp3.1' " />
   </ItemGroup>
 </Project>
