--- a/src/NetEvolve.Guard/NetEvolve.Guard.csproj
+++ b/src/NetEvolve.Guard/NetEvolve.Guard.csproj
@@ -19,6 +19,7 @@
 
     <PackageProjectUrl>https://github.com/dailydevops/guard</PackageProjectUrl>
     <RepositoryUrl>https://github.com/dailydevops/guard.git</RepositoryUrl>
+    <PackageReleaseNotes>$(PackageProjectUrl)/releases</PackageReleaseNotes>
 
     <PackageTags>argument;inputvalidation;parameter;guard;ensure;validation;contract;assert;assertion;exceptions</PackageTags>
   </PropertyGroup>
