fix: Set `GitVersionTargetFramework` explizit
Signed-off-by: Martin Stühmer <me@samtrion.net>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,4 +9,9 @@
   <Import Project="$(DirEngineeringSettings)src.build.props" Condition=" !$(MSBuildProjectName.Contains('.Tests')) " />
   <Import Project="$(DirEngineeringSettings)tests.build.props" Condition=" $(MSBuildProjectName.Contains('.Tests')) " />
 
+  <PropertyGroup>
+    <!-- Workaround, until https://github.com/GitTools/GitVersion/pull/4206 is released -->
+    <GitVersionTargetFramework>net8.0</GitVersionTargetFramework>
+  </PropertyGroup>
+
 </Project>
