--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,11 +26,6 @@ jobs:
       enableSonarQube: true
       dotnet-logging: ${{ inputs.dotnet-logging }}
       dotnet-quality: ga
-      dotnet-version: |
-        3.1.x
-        5.x
-        6.x
-        7.x
-        8.x
+      dotnet-version: ${{ vars.NE_DOTNET_TARGETFRAMEWORKS }}
       solution: ./Guard.sln
     secrets: inherit
