--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,5 +25,5 @@ jobs:
     with:
       dotnetLogging: ${{ inputs.dotnet-logging }}
       dotnetVersion: ${{ vars.NE_DOTNET_TARGETFRAMEWORKS }}
-      solution: ./Guard.sln
+      solution: ./Guard.slnx
     secrets: inherit
