--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,26 +5,18 @@
   </PropertyGroup>
   <ItemGroup>
     <GlobalPackageReference Include="CSharpier.MSBuild" Version="1.2.1" />
-    <GlobalPackageReference Include="GitVersion.MsBuild" Version="6.1.0" />
     <GlobalPackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="4.14.0" />
     <GlobalPackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="10.0.100" />
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
     <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15" />
     <GlobalPackageReference Include="NetEvolve.Defaults" Version="1.4.72" />
-    <GlobalPackageReference
-      Include="SonarAnalyzer.CSharp"
-      Version="10.16.0.128591"
-      Condition=" '$(BuildingInsideVisualStudio)' == 'true' "
-    />
+    <GlobalPackageReference Include="SonarAnalyzer.CSharp" Version="10.16.0.128591" />
   </ItemGroup>
   <ItemGroup>
-    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
-    <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.0.6" />
     <PackageVersion Include="NetEvolve.Arguments" Version="1.3.134" />
-    <PackageVersion Include="NetEvolve.Extensions.XUnit" Version="2.7.59" />
+    <PackageVersion Include="NetEvolve.Extensions.TUnit" Version="3.1.0" />
     <PackageVersion Include="Polyfill" Version="7.33.0" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageVersion Include="TUnit" Version="1.2.11" />
   </ItemGroup>
 </Project>
