feat: Switched to TUnit (#494)
* feat: Switched to TUnit

* fix: Migrated all Asserts to TUnit

* fix: Simplified Collection Creation

--- a/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
+++ b/tests/NetEvolve.Guard.Tests.Unit/NetEvolve.Guard.Tests.Unit.csproj
@@ -4,18 +4,8 @@
     <NoWarn>$(NoWarn);NU1701;CA1861;S3459;S3236</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="coverlet.collector">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.msbuild" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="NetEvolve.Extensions.XUnit" />
-    <PackageReference Include="xunit" />
-    <PackageReference Include="xunit.runner.visualstudio">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="NetEvolve.Extensions.TUnit" />
+    <PackageReference Include="TUnit" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\NetEvolve.Guard\NetEvolve.Guard.csproj" />
